Project

General

Profile

Actions

Bug #20071

closed

wrong object size after copy of uncompressed multipart objects

Added by Casey Bodley almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when compression is disabled, the object's accounted_size is set to the head object's size, rather than the size from the manifest

https://github.com/ceph/ceph/pull/14950


Related issues 2 (1 open1 closed)

Related to rgw - Bug #20255: rgw: Size of copied object is wrong in the indexNew06/12/2017

Actions
Copied to rgw - Backport #20269: kraken: wrong object size after copy of uncompressed multipart objectsResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #2

Updated by Casey Bodley almost 7 years ago

  • Related to Bug #20255: rgw: Size of copied object is wrong in the index added
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20269: kraken: wrong object size after copy of uncompressed multipart objects added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF