rgw: set object accounted size correctly

sometimes, object accounted size is set wrong,
because we don't konw the object size if don't resort to the compression info or manifest.
e.g, when i use s3cmd do copy object(bucket_A/obj_A -> bucket_B/obj_B, assume the size of obj_A is 4M).
then i use s3cmd do list bucket, I got obj_B size is 512K, it is the head size apparently.

Fixes: http://tracker.ceph.com/issues/20071

Signed-off-by: fang yuxiang <fang.yuxiang@eisoo.com>